--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -17,7 +17,7 @@
         {
             "id": "isaac_path",
             "description": "Absolute path to the current Isaac Sim installation. Can be skipped if Isaac Sim installed from pip.",
-            "default": "/home/lfm/isaacsim",
+            "default": "${workspaceFolder}/_isaac_sim",
             "type": "promptString"
         },
     ]
